src/test/deca/syntax/valid/non_provided/decl_var.deca
// Description:
//    Programme minimaliste avec déclaration sans et avec initialisation
//
// Resultats:
//    
//
// Historique:
//    cree le 11/01/2020

{
    int y;
    int x = 0;
}