src/test/deca/syntax/invalid/non_provided/bad_assign.deca
// Description:
//    Programme minimaliste avec erreur lors de l'affectation
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 11/01/2020

{
    int y; 
    int x;
    = y;
}